# house-of-cards

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-test.yml
dircreator/: cli.py
hoc/: cli.py
tests/: cli_test.py
